@@ -20,14 +20,16 @@
  */
 package com.mokylin.gm.scheduler.jobloader;
 
+import com.mokylin.gm.scheduler.util.ConfigInfo;
 import com.mokylin.gm.scheduler.util.FileHelper;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.*;
-import java.net.*;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.security.CodeSource;
 import java.security.ProtectionDomain;
 import java.security.SecureClassLoader;
@@ -40,125 +42,199 @@ import java.util.jar.JarFile;
  *
  * @author Service Platform Architecture Team (spat@58.com)
  */
-public class DynamicClassLoader extends URLClassLoader {
+public class DynamicClassLoader extends SecureClassLoader {
 
-    private static final Logger logger = LoggerFactory.getLogger(DynamicClassLoader.class);
+    private static Logger logger = LoggerFactory.getLogger(DynamicClassLoader.class);
 
     /**
      * jar list load class from this
      */
-    private Set<String> jarList = new HashSet<>();
+    private static Set<String> jarList = new HashSet<>();
 
-
-    private Set<String> foldList = new HashSet<>();
+    private static Set<String> foldList = new HashSet<>();
 
     /**
      * class cache
      */
-    private Map<String, Class<?>> classCache = new HashMap<String, Class<?>>();
-
-    public DynamicClassLoader(URL[] urls, ClassLoader parent) {
-        super(urls, parent);
-        addUrlFile(urls);
-    }
-
-    public DynamicClassLoader(URL[] urls) {
-        super(urls);
-        addUrlFile(urls);
-    }
-
-    public DynamicClassLoader(URL[] urls, ClassLoader parent, URLStreamHandlerFactory factory) {
-        super(urls, parent, factory);
-        addUrlFile(urls);
-    }
+    private Map<String,Class<?>> classCache = new HashMap<String,Class<?>>();
 
 
-    public DynamicClassLoader(ClassLoader parent) {
-        super(new URL[]{}, parent);
-    }
-
-    private void addUrlFile(URL[] urls) {
-        for (URL u : urls) {
-            String fileStr = u.getFile();
-            File file = new File(fileStr);
-            if (file.exists() && file.isDirectory()) {
-                foldList.add(fileStr);
-            } else {
-                jarList.add(fileStr);
-            }
-        }
+    public DynamicClassLoader(ClassLoader parent){
+        super(parent);
     }
 
     public DynamicClassLoader() {
-        super(new URL[]{});
+
+    }
+
+    /**
+     * dynamic find class from jar
+     * @param jarPath
+     * @param className
+     * @param fromCache
+     * @return
+     * @throws ClassNotFoundException
+     */
+    public Class<?> findClass(String jarPath, String className, boolean fromCache) throws ClassNotFoundException {
+
+        logger.debug("find class jarPath: " + jarPath + "  className: " + className + "  fromCache:" + fromCache);
+
+        if(fromCache && classCache.containsKey(className)) {
+            return classCache.get(className);
+        }
+
+        String classPath = className.replace('.', '/').concat(".class");
+        byte[] clsByte = null;
+        if(jarPath==null || jarPath.equalsIgnoreCase("")) {
+            for(String jp : jarList) {
+                jarPath = jp;
+                clsByte = getClassByte(jp, classPath);
+                if(clsByte != null) {
+                    break;
+                }
+            }
+//			clsByte = getClassByte(classPath);
+        } else {
+            clsByte = getClassByte(jarPath, classPath);
+        }
+
+        if(clsByte == null) {
+            throw new ClassNotFoundException(className);
+        }
+
+        URL url = null;
+        try {
+            url = new URL("file", "", jarPath);
+        } catch (MalformedURLException e) {
+            e.printStackTrace();
+        }
+        return findClass(className, clsByte, url);
+    }
+
+        @Override
+    public URL getResource(String name) {
+        URL resource = super.getResource(name);
+        if (resource == null) {
+            File file = null;
+            for (String fold : foldList) {
+                file = new File(fold, name);
+                if (file.exists()) {
+                    try {
+                        resource = file.toURI().toURL();
+                    } catch (Exception e) {
+                        logger.error(e.getMessage(), e);
+                    }
+                    return resource;
+                }
+            }
+        }
+        return resource;
     }
 
 
-//    @Override
-//    public URL getResource(String name) {
-//        URL resource = super.getResource(name);
-//        if (resource == null) {
-//            File file = null;
-//            for (String fold : foldList) {
-//                file = new File(fold, name);
-//                if (file.exists()) {
-//                    try {
-//                        resource = file.toURI().toURL();
-//                    } catch (Exception e) {
-//                        logger.error(e.getMessage(), e);
-//                    }
-//                    return resource;
-//                }
-//            }
-//        }
-//        return resource;
-//    }
+    /**
+     *
+     * @param className
+     * @param clsByte
+     * @return
+     */
+    public Class<?> findClass(String className, byte[] clsByte, URL url) {
+        Class<?> cls = null;
+        try {
+            CodeSource cs = new CodeSource(url, (java.security.cert.Certificate[]) null);
+            ProtectionDomain pd = new ProtectionDomain(cs, null, this, null);
+            cls = super.defineClass(className, clsByte, 0, clsByte.length, pd);
+            resolveClass(cls);
+            classCache.put(className, cls);
+        } catch(Exception ex) {
+            logger.error("define class error", ex);
+        }
+
+        return cls;
+    }
+
+    /**
+     * dynamic find class from jar
+     * @param jarPath
+     * @param className
+     * @return
+     * @throws ClassNotFoundException
+     */
+    public Class<?> findClass(String jarPath, String className) throws ClassNotFoundException {
+        return findClass(jarPath, className, true);
+    }
+
+    /**
+     * dynamic find class from jar
+     */
+    @Override
+    public Class<?> findClass(String className) throws ClassNotFoundException {
+        return findClass("", className, true);
+    }
+
+    /**
+     * dynamic find class from jar
+     * @param className
+     * @param fromCache
+     * @return
+     * @throws ClassNotFoundException
+     */
+    public Class<?> findClass(String className, boolean fromCache) throws ClassNotFoundException {
+        return findClass("", className, fromCache);
+    }
+
+    /**
+     * clear all class cache
+     */
+    @SuppressWarnings({ "rawtypes", "unchecked" })
+    public void clearAllClassCache(){
+        logger.info("clear class cache:");
+        try {
+            Iterator it = classCache.entrySet().iterator();
+            while (it.hasNext()) {
+                Map.Entry<String, Class<?>> entry = (Map.Entry<String, Class<?>>) it.next();
+                logger.debug("-----key:" + entry.getKey() + "  value:" + entry.getValue().getName());
+            }
+        } catch(Exception ex) {
+            logger.error(ex.getMessage(),ex);
+        }
+        classCache.clear();
+    }
 
     /**
      * add jar url
-     *
      * @param url
      * @throws Exception
      */
-    public void addURL(String url) throws MalformedURLException {
-        if (!jarList.contains(url)) {
-            File file = new File(url);
-            if(file.exists() && file.isFile()){
-                jarList.add(url);
-            }
-            if(file.exists() && file.isDirectory()){
-                foldList.add(url);
-            }
-            addURL(file.toURI().toURL());
+    public void addURL(String url) {
+        if(!jarList.contains(url)){
+            jarList.add(url);
+//			try {
+//				ucp.addURL(new URL("file", "", url));
+//			} catch (MalformedURLException e) {
+//				e.printStackTrace();
+//			}
         }
     }
 
     /**
      * add folder jars
-     *
      * @param dirs
-     * @throws java.io.IOException
+     * @throws IOException
      */
     public void addFolder(String... dirs) throws IOException {
-        if (logger.isDebugEnabled()) {
-            logger.debug("class load add dir path:", Arrays.toString(dirs));
-        }
-        Collections.addAll(foldList, dirs);
-        for(String dir:dirs){
-            addURL(dir);
-        }
-        Set<String> jarList = FileHelper.getAllPath(dirs);
-        for (String jar : jarList) {
+        Set<String> jarList = FileHelper.getUniqueLibPath(dirs);
+        Collections.addAll(foldList,dirs);
+        for(String jar : jarList) {
             addURL(jar);
         }
     }
 
     /**
      * get jar list
-     *
      * @return
      */
-    public Collection<String> getJarList() {
+    public Set<String> getJarList(){
         return jarList;
     }
 
@@ -177,11 +253,9 @@ public class DynamicClassLoader extends URLClassLoader {
 //		}
 //		return clsByte;
 //	}
-//
-
+//	
     /**
      * get class byte from jarPath
-     *
      * @param jarPath
      * @param classPath
      * @return
@@ -193,18 +267,39 @@ public class DynamicClassLoader extends URLClassLoader {
         try {
             jarFile = new JarFile(jarPath);  // read jar
             JarEntry entry = jarFile.getJarEntry(classPath); // read class file
-            if (entry != null) {
+            if(entry != null) {
                 logger.debug("get class:" + classPath + "  from:" + jarPath);
                 input = jarFile.getInputStream(entry);
                 clsByte = new byte[input.available()];
                 input.read(clsByte);
             }
-        } catch (Exception e) {
-            logger.error(e.getMessage(), e);
+        } catch(Exception e) {
+            e.printStackTrace();
         } finally {
-            IOUtils.closeQuietly(input);
-            IOUtils.closeQuietly(jarFile);
+            if(input != null) {
+                try {
+                    input.close();
+                } catch(Exception e) {
+                    e.printStackTrace();
+                }
+            }
+            if(jarFile != null) {
+                try {
+                    jarFile.close();
+                } catch (Exception e) {
+                    e.printStackTrace();
+                }
+            }
         }
         return clsByte;
+    }
+
+    public static void main(String[] args) throws IllegalAccessException, InstantiationException, ClassNotFoundException, IOException {
+        ConfigInfo.setConfigPath("E:\\workspace\\gm_platform\\gm_gccp\\code\\trunk\\scheduler\\scheduler.server\\target\\conf\\scheduler.properties");
+        DynamicClassLoader cl = new DynamicClassLoader(Thread.currentThread().getContextClassLoader());
+        Thread.currentThread().setContextClassLoader(cl);
+        cl.addFolder("E:\\workspace\\gm_platform\\gm_gccp\\code\\trunk\\scheduler\\scheduler.server\\target\\jobs\\gmjob-impl");
+        Class<?> aClass = cl.loadClass("com.mokylin.gm.job.GmJob");
+        Object o = aClass.newInstance();
     }
 }
